@@ -464,11 +464,11 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
     int i, nargs = length(args), lf, lout = NA_INTEGER;
     Rboolean One = nargs == 1;
 
-    if (DispatchOrEval(call, op, "seq", args, rho, &ans, 0, 0))
+    if (DispatchOrEval(call, op, "seq", args, rho, &ans, 0, 1))
 	return(ans);
 
-    /* This is a primitive and we have not dispatched to a method
-       so we manage the argument matching ourselves.  We pretend this is
+    /* This is a primitive and we manage argument matching ourselves.
+       We pretend this is
        seq(from, to, by, length.out, along.with, ...)
     */
     PROTECT(ap = CONS(R_NilValue,
@@ -483,12 +483,6 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
     SET_TAG(tmp, install("along.with")); tmp = CDR(tmp);
     SET_TAG(tmp, R_DotsSymbol);
     PROTECT(args = matchArgs(ap, args, call));
-
-    /* Manage 'along.with' prior to evaluation */
-    ap = CDDR(CDDR(args));
-    if(CAR(ap) != R_MissingArg)
-	SETCAR(ap, ScalarInteger(length(eval(CAR(ap), rho))));
-    PROTECT(args = evalListKeepMissing(args, rho));
 
     from = CAR(args); args = CDR(args);
     to = CAR(args); args = CDR(args);
@@ -640,7 +634,7 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 	errorcall(call, _("too many arguments"));
 
 done:
-    UNPROTECT(3);
+    UNPROTECT(2);
     return ans;
 }
 
